--- a/ansible/playbook_docker_prune.yml
+++ b/ansible/playbook_docker_prune.yml
@@ -8,6 +8,7 @@
       register: docker_check
       ignore_errors: yes
       changed_when: false
+      become: yes
 
     - name: Skip Docker prune if not installed
       debug:
