--- a/ansible/playbook_docker_prune.yml
+++ b/ansible/playbook_docker_prune.yml
@@ -1,29 +1,28 @@
 ---
-- name: Docker Prune Playbook
+- name: Docker Prune Playbook Cleaner Output
   hosts: all
   become: yes
   tasks:
-    - name: Check if Docker is installed
+    - name: Check if Docker command exists
       shell: "command -v docker"
       register: docker_check
-      ignore_errors: yes
       changed_when: false
+      failed_when: false 
       become: yes
 
-    - name: Skip Docker prune if not installed
-      debug:
-        msg: "Docker is not installed on {{ inventory_hostname }}. Skipping prune."
-      when: docker_check.rc != 0
-
-    - name: Prune unused Docker images
+    - name: Prune unused Docker images and containers
       community.docker.docker_prune:
         images: yes
-        images_filters:
-          dangling: false
+        containers: yes
       register: prune_result
-      when: docker_check.rc == 0
+      when: docker_check.rc == 0 
 
-    - name: Display Docker prune results if space was reclaimed
+    - name: Display Docker prune results
       debug:
-        msg: "Docker prune completed on {{ inventory_hostname }}. Space reclaimed: {{ prune_result.space_reclaimed | human_readable(unit='B') }}"
-      when: docker_check.rc == 0 and prune_result.space_reclaimed is defined and prune_result.space_reclaimed > 0
+        msg: "Docker prune completed on {{ inventory_hostname }}. Space reclaimed: {{ prune_result.space_reclaimed | default(0) | human_readable(unit='B') }}"
+      when: docker_check.rc == 0 
+
+    - name: Inform if Docker was not found
+      debug:
+        msg: "Docker not found on {{ inventory_hostname }}. Skipping prune."
+      when: docker_check.rc != 0 
