--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -1,4 +1,4 @@
-PG_PASS=GENERATE SECRET pass
+PG_PASS=GENERATE SECRET PASS
 AUTHENTIK_SECRET_KEY=GENERATE SECRET KEY
 COMPOSE_PORT_HTTPS=1443
 COMPOSE_PORT_HTTP=7000
