--- a/ansible/oh-my-zsh.yml
+++ b/ansible/oh-my-zsh.yml
@@ -50,11 +50,12 @@
         name: "{{ ansible_env.USER }}"
         shell: /bin/zsh
 
-    - name: Download zshrc configuration
-      get_url:
-        url: "https://raw.githubusercontent.com/m7mdbinghaith/homelab/testing/ansible/files/zshrc"
-        dest: "{{ ansible_env.HOME }}/.zshrc"
-        owner: "{{ ansible_env.USER }}"
-        group: "{{ ansible_env.USER }}"
-        mode: '0644'
+    - name: Download and set up zshrc configuration
+      shell: |
+        curl -fsSL "https://raw.githubusercontent.com/m7mdbinghaith/homelab/testing/ansible/files/zshrc" -o ~/.zshrc && \
+        chown "{{ ansible_env.USER }}:{{ ansible_env.USER }}" ~/.zshrc && \
+        chmod 644 ~/.zshrc
+      args:
+        creates: "{{ ansible_env.HOME }}/.zshrc"
       become: false
+      become_user: "{{ ansible_env.USER }}"
